compiler/tools/fpp-check/test/state_machine/redef/action.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/action.fpp:3.3
  action a
  ^
error: redefinition of symbol a
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/action.fpp:2.3
  action a
  ^
